2004/04/21
	RELEASE 2.0.3

	Added missing "from __future__ import generators" statement to
	InformationStore. 

	Simplified RDF/XML serializer fixing a few bugs involving
	BNodes.

	Added a reset method to RDF/XML parser.

	Changed 'if foo' to "if foo is not None" in a few places in
	the RDF/XML parser.

	Fully qualified imports in rdflib.syntax {parser, serializer}.

	Context now goes through InformationStore (was bypassing it
	going directly to backend).


2004/03/22
	RELEASE 2.0.2

	Improved performance of Identifier equality tests.

	Added missing "from __future__ import generators" statements
	needed to run on Python2.2.

	Added alternative to shlib.move() if it isn't present.

	Fixed bug that occured when specifying a backend to
	InformationStore's constructor.

	Fixed bug recently introduced into InformationStore's remove
	method.


2004/03/15
	RELEASE 2.0.1

	Fixed a bug in the SleepyCatBackend multi threaded concurrency
	support. (Tested fairly extensively under the following
	conditions: multi threaded, multi process, and both).  NOTE:
	fix involved change to database format -- so 2.0.1 will not be
	able to open databases created with 2.0.0

	Removed the use of the Concurrent wrapper around
	InMemoryBackend and modified InMemoryBackend to handle
	concurrent requests. (Motivated by Concurrent's poor
	performance on bigger TripleStores.)

	Improved the speed of len(store) by making backends
	responsible for implementing __len__.

	Context objects now have a identifier property.


2004/03/10
	RELEASE 2.0.0

	Fixed a few bugs in the SleepyCatBackend multi process
	concurrency support.

	Removed rdflib.Resource

	Changed remove to now take a triple pattern and removed
	remove_triples method.

	Added __iadd__ method to Store in support of store +=
	another_store.


2004/01/04
	RELEASE 1.3.2

	Added a serialization dispatcher.

	Added format arg to save method.

	Store now remembers prefix/namespace bindings.

	Backends are now more pluggable

	...

2003/10/14