@@ -1,3 +1,12 @@
+2004/08/29
+        RELEASE 2.
+
+	Removed unfinished functionality.
+
+	Fixed bug where another prefix other than rdf was getting
+	defined for the rdf namespace (causing an assertion to fail).
+
+
 2004/04/21
 	RELEASE 2.0.3
 
